--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: required
 services:
     - docker
+env:
+    global:
+        - SHA=$(git rev-parse HEAD)
+        - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
     - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
     - curl https://sdk.cloud.google.com | bash > /dev/null;
@@ -11,3 +15,11 @@ before_install:
     - gcloud config set compute/zone us-central1-a
     - gcloud container clusters get-credentials standard-cluster-1
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+    - docker build -t alanmorgan/react-test -f ./client/Dockerfile.dev ./client
+script:
+    - docker run alanmorgan/react-test npm test -- --coverage
+deploy:
+    provider: script
+    script: bash ./deploy.sh
+    on:
+        branch: master
